util:remove console, BookView:fix the error while collapsing sidebar, Home:conditionaly render the books Login:remove console, BookCard:add the functionality of reading the book by clicking read now option of bookcard, Sidebar:display data from api remove hard code data,remove console, SummaryBookMOdal:remove console, CardsSlider:del the cardSlider componenet, del unwanted modules, update the default port from 1212 to 3000

--- a/src/renderer/components/commonComponents/SummaryModal/SummaryBookModal.css
+++ b/src/renderer/components/commonComponents/SummaryModal/SummaryBookModal.css
@@ -112,6 +112,10 @@
     justify-content: center;
 }
 
+.readNow:hover {
+    background-color: #99B82D !important;
+}
+
 .ant-modal .ant-modal-close {
     color: white !important;
 }
